sp-stress (0.1.5-1) unstable; urgency=low

  * Ioload was deprecated and replaced with a minimal shell script that
    recommends using spew instead.
  * Sp-stress now recommends spew. Fixes: NB#95931

 -- Eero Tamminen <eero.tamminen@nokia.com>  Fri, 23 Jan 2009 10:59:15 +0200

sp-stress (0.1.4-1) unstable; urgency=low

  * Memload: Fixed a segmentation fault occurring in argument handling.

 -- Eero Tamminen <eero.tamminen@nokia.com>  Tue, 18 Nov 2008 10:33:00 +0200

sp-stress (0.1.3-1) unstable; urgency=low

  * Sp-stress-dbg package is now created.
  * Cpuload now supports selection of scheduler
  * Cpuload supports now setting up highest or lowest priority available
    without resorting to additional tools.
  * Fixes: NB#91185
  * Fixed the manual page for flash_eater missing from previous release.
  * Cpuload now validates load values more strictly.

 -- Eero Tamminen <eero.tamminen@nokia.com>  Fri, 31 Oct 2008 14:49:39 +0200

sp-stress (0.1.2-2) unstable; urgency=low

  * debian/rules performed a clean where distclean would have been
    needed instead. Fixed.

 -- Eero Tamminen <eero.tamminen@nokia.com>  Wed, 15 Oct 2008 13:43:13 +0300

sp-stress (0.1.2-1) unstable; urgency=low

  * Added new script (flash_eater) to use up flash storage space until
    only a given amount remains.
  * Added a new option (-l) to memload; it will allocate memory so that
    only a given amount is left.
  * Added documentation for the new script and memload option.
  * Fixes: NB#88931

 -- Eero Tamminen <eero.tamminen@nokia.com>  Thu,  9 Oct 2008 17:24:05 +0300

sp-stress (0.1.1-1) unstable; urgency=low

  * Cpuload no longer attempts to automatically raise its own priority.
    Instead, this needs to be explicitly requested with the new -p
    option. Fixes: NB#83658
  * Fixed cpuload reporting priority raising failures even when it
    actually had succeeded

 -- Eero Tamminen <eero.tamminen@nokia.com>  Fri,  4 Apr 2008 10:04:22 +0300
